CRUD Usuarios - Roles - Permisos

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,9 +1,14 @@
 {
+    "User": "Usuario",
+    "Users": "Usuarios",
+    "Role": "Rol",
+    "Roles": "Roles",
     "Permissions": "Permisos",
     "Permission": "Permiso",
     "Name": "Nombre",
-    "Users": "Usuarios",
     "Security": "Seguridad",
     "Attach Permission": "Ligar Permiso",
-    "Create Permission": "Crear Permiso"
+    "Create Permission": "Crear Permiso",
+    "Email": "Correo",
+    "Active": "Activo"
 }
