CRUD inicial de Equipos (Teams)

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -10,5 +10,10 @@
     "Attach Permission": "Ligar Permiso",
     "Create Permission": "Crear Permiso",
     "Email": "Correo",
-    "Active": "Activo"
+    "Active": "Activo",
+    "Short": "Corto",
+    "Logotipo": "Logo",
+    "Catalogs": "Catálogos",
+    "Teams": "Equipos",
+    "Team": "Equipo"
 }
