CRUD Equipos (Teams) ya con imágenes

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -15,5 +15,6 @@
     "Logotipo": "Logo",
     "Catalogs": "Catálogos",
     "Teams": "Equipos",
-    "Team": "Equipo"
+    "Team": "Equipo",
+    "Logo Gris": "Logo Gris"
 }
