Jornadas CRUD con Recurso

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -16,5 +16,12 @@
     "Catalogs": "Catálogos",
     "Teams": "Equipos",
     "Team": "Equipo",
-    "Logo Gris": "Logo Gris"
+    "Logo Gris": "Logo Gris",
+    "Rounds": "Jornadas",
+    "Round": "Jornada",
+    "Start": "Inicio",
+    "Finish": "Final",
+    "Type": "Tipo",
+    "Seasons": "Temporadas",
+    "Season": "Temporada"
 }
