CRUD Partidos se agrega FILTRO para Jornada y se quita el getEloquentQuery

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -23,5 +23,15 @@
     "Finish": "Final",
     "Type": "Tipo",
     "Seasons": "Temporadas",
-    "Season": "Temporada"
+    "Season": "Temporada",
+    "Games": "Partidos",
+    "Game": "Partido",
+    "Local": "Local",
+    "Points": "Puntos",
+    "Visit": "Visita",
+    "Game day": "Fecha",
+    "Game time": "Hora",
+    "Game date": "Fecha Hora",
+    "Winner": "Ganador"
+
 }
