Comienzo con los PRONOSTICOS se hizo el SELECT_ROUND

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -44,5 +44,6 @@
     "Language": "Idioma",
     "Spanish": "Español",
     "English": "Inglés",
-    "Image": "Imagen"
+    "Image": "Imagen",
+    "Dashboard": "Panel Inicial"
 }
