Componente SelectRound: Presenta Jornadas de manera centrada, con estilos VITE se ejecuta método select_round() al hacer clic en botón de jornada

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -45,5 +45,6 @@
     "Spanish": "Español",
     "English": "Inglés",
     "Image": "Imagen",
-    "Dashboard": "Panel Inicial"
+    "Dashboard": "Panel Inicial",
+    "Current Round": "Jornada Actual"
 }
