Partidos: Actualiza WINNER y game_date al CREAR y EDITAR

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -31,6 +31,8 @@
     "Local": "Local",
     "Points": "Puntos",
     "Visit": "Visita",
+    "Visit team": "Visita",
+    "Local Team": "Local",
     "Game day": "Fecha",
     "Game time": "Hora",
     "Game date": "Fecha Hora",
