Depuración de archivos carpeta ejemplo, rutas y se agrega enlace desde dashboard al panel administrativo

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,6 +1,6 @@
 {
+    "Admin Panel": "Panel Administrativo",
     "Date": "Fecha",
-
     "User": "Usuario",
     "Users": "Usuarios",
     "Role": "Rol",
