Tabla de Pronósticos: Selección de jornada y encabezado con logos de equipos

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,4 +1,7 @@
 {
+    "Accumulated": "Acumulado",
+    "Hits": "Aciertos",
+    "Picks Table": "Tabla de Pronósticos",
     "Visit points": "Puntos Visita",
     "Local points": "Puntos Local",
     "Admin Panel": "Panel Administrativo",
