Survivors: Bloquear cuando el partido de un equipo seleccionado bloquea la jornada

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -5,6 +5,7 @@
     "Select": "Seleccionar",
     "Accumulated": "Acumulado",
     "Hits": "Aciertos",
+    "Hit": "¿Acertó?",
     "Picks Table": "Tabla de Pronósticos",
     "Round Positions": "Posiciones Jornada",
     "Visit points": "Puntos Visita",
