Ruta para ejecutar optimize:clear en el servidor

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,4 +1,5 @@
 {
+    "Sorry You Not Authorized To This Command": "Lo siento, usted no está autorizado para ejecutar este comando",
     "Table Survivors": "Tabla Survivors",
     "Last Game": "Último Juego",
     "Not Found Records": "No se encontraron registros",
