Login con User Name

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -9,10 +9,13 @@
     "Hits": "Aciertos",
     "Hit": "¿Acertó?",
     "Picks Table": "Tabla de Pronósticos",
+    "Password": "Clave",
+    "Email/Username": "Correo Electrónico / Usuario",
     "Round Positions": "Posiciones Jornada",
     "Visit points": "Puntos Visita",
     "Local points": "Puntos Local",
     "Admin Panel": "Panel Administrativo",
+    "Log in": "Ingresar",
     "Date": "Fecha",
     "User": "Usuario",
     "Users": "Usuarios",
