Tabla general de posiciones

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,4 +1,7 @@
 {
+    "General Table": "Tabla General",
+    "General Positions": "Posiciones Generales",
+    "Total Error": "Error Total",
     "Sorry You Not Authorized To This Command": "Lo siento, usted no está autorizado para ejecutar este comando",
     "Table Survivors": "Tabla Survivors",
     "Last Game": "Último Juego",
