Traducciones para gestionar cuenta

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,5 +1,8 @@
 {
     "General Table": "Tabla General",
+    "Manage Account": "Gestionar Cuenta",
+    "Profile": "Perfil",
+    "Log Out": "Salir",
     "General Positions": "Posiciones Generales",
     "Total Error": "Error Total",
     "Sorry You Not Authorized To This Command": "Lo siento, usted no está autorizado para ejecutar este comando",
