Se cambian imagenes  y en página principal se agrega formulario par aingresar

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -22,6 +22,7 @@
     "Local points": "Puntos Local",
     "Admin Panel": "Panel Administrativo",
     "Log in": "Ingresar",
+    "Register": "Registrarse",
     "Date": "Fecha",
     "User": "Usuario",
     "Users": "Usuarios",
