--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,7 +1,26 @@
 {
+    "Profile Information": "Información del Perfil",
+    "Update your account's profile information and email address.":"Actualice la información del perfil y la dirección de correo electrónico de su cuenta.",
+    "Update Password": "Actualizar contraseña",
+    "Ensure your account is using a long, random password to stay secure.": "Asegúrese de que su cuenta utilice una contraseña larga y aleatoria para mantenerse segura.",
+    "Current Password": "Contraseña Actual",
+    "New Password":"Nueva Contraseña",
+    "Confirm Password": "Confirme Contraseña",
+    "Save": "Guardar",
+    "Cancel": "Cancelar",
+    "Browser Sessions": "Sesiones del Navegador",
+    "Manage and log out your active sessions on other browsers and devices.":"Administre y cierre sesión en sus sesiones activas en otros navegadores y dispositivos.",
+    "If necessary, you may log out of all of your other browser sessions across all of your devices. Some of your recent sessions are listed below; however, this list may not be exhaustive. If you feel your account has been compromised, you should also update your password.":"Si es necesario, puede cerrar sesión en todas las demás sesiones de su navegador en todos sus dispositivos. Algunas de sus sesiones recientes se enumeran a continuación; sin embargo, esta lista puede no ser exhaustiva. Si cree que su cuenta ha sido comprometida, también debe actualizar su contraseña.",
+    "Log Out Other Browser Sessions":"Cerrar sesión en otras sesiones del navegador",
+    "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.":"Ingrese su contraseña para confirmar que desea cerrar sesión en sus otras sesiones de navegador en todos sus dispositivos.",
+    "Delete Account": "Eliminar Cuenta",
+    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Una vez que se elimine su cuenta, todos sus recursos y datos se eliminarán permanentemente. Antes de eliminar su cuenta, descargue cualquier dato o información que desee conservar",
+   "Permanently delete your account.": "Elimina permanentemente tu cuenta.",
+    "Photo":"Fotografía",
     "General Table": "Tabla General",
     "Manage Account": "Gestionar Cuenta",
     "Profile": "Perfil",
+    "Select A New Photo":"Seleccione Una Nueva Fotografía",
     "Log Out": "Salir",
     "General Positions": "Posiciones Generales",
     "Total Error": "Error Total",
