Se agrega a tabla de USERS atributo last_login y se ajusta todo para grabar la última hora de acceso por login.

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,4 +1,5 @@
 {
+    "Last login": "Último Acceso",
     "Profile Information": "Información del Perfil",
     "Update your account's profile information and email address.":"Actualice la información del perfil y la dirección de correo electrónico de su cuenta.",
     "Update Password": "Actualizar contraseña",
