--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -2,6 +2,8 @@
     "Last login": "Último Acceso",
     "User Survivors": "Survivors de Usuario",
     "User Survivor": "Survivor de Usuario",
+    "Conference": "Conferencia",
+    "Division id": "División",
     "Profile Information": "Información del Perfil",
     "Update your account's profile information and email address.":"Actualice la información del perfil y la dirección de correo electrónico de su cuenta.",
     "Update Password": "Actualizar contraseña",
