--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,4 +1,5 @@
 {
+    "Survivors Table": "Tabla de Survivors",
     "Last login": "Último Acceso",
     "User Survivors": "Survivors de Usuario",
     "User Survivor": "Survivor de Usuario",
