Pemirtir EMPATES en marcador de Partidos + Agregar botón para actuaizar (Refrescar) pronósticos

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,4 +1,5 @@
 {
+    "Update": "Actualizar",
     "Survivors Table": "Tabla de Survivors",
     "Last login": "Último Acceso",
     "User Survivors": "Survivors de Usuario",
