Ajustes a encabezados de todos los procesos

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -30,6 +30,7 @@
     "Select A New Photo":"Seleccione Una Nueva Fotografía",
     "Log Out": "Salir",
     "General Positions": "Posiciones Generales",
+    "General Positions Table": "Tabla Genera de Posiciones",
     "Total Error": "Error Total",
     "Sorry You Not Authorized To This Command": "Lo siento, usted no está autorizado para ejecutar este comando",
     "Table Survivors": "Tabla Survivors",
