Tabla de Pronósticos: Se colcoa el wire.loading oculta los pronósticos anteriores, pone la leyenda CARGANDO

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,4 +1,5 @@
 {
+    "Loading...": "Cargando...",
     "Update": "Actualizar",
     "Survivors Table": "Tabla de Survivors",
     "Last login": "Último Acceso",
