Survivors: Se cambia etiqueta con local y visita al seleccionar, se agrega icono del equipo contra el que va en el partido que le corresponde

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,4 +1,5 @@
 {
+    "Selection": "Selección",
     "Loading...": "Cargando...",
     "Update": "Actualizar",
     "Survivors Table": "Tabla de Survivors",
